# action-send-mail

./: Dockerfile  README.md  action.yml  pyproject.toml  send_email.py
