[tool.poetry]
name = "action-send-mail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "action_send_mail"}]

[tool.poetry.dependencies]
python = "^3.10"
sendgrid = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
